fix: clean rewrite of SecurityConfig with correct CORS - no FilterRegistrationBean conflict